--- a/text/12_Extrema.tex
+++ b/text/12_Extrema.tex
@@ -233,7 +233,7 @@ Start with the bottom edge, along the line $y=-2$. If $y$ is $-2$, then on the s
 
 The critical points of $f_1$ are found by setting its derivative equal to 0:
 $$\fp_1(x)=0\qquad \Rightarrow x=0.$$
-Evaluating $f_1$ at this critical point, and at the endpoints of $[-1,1]$ gives:
+Evaluating $f_1$ at this critical point, and at the endpoints of $[-1,2]$ gives:
 \begin{align*}
 f_1(-1) = 2 \qquad&\Rightarrow\qquad f(-1,-2) = 2\\
 f_1(0) = 1 \qquad&\Rightarrow \qquad f(0,-2) = 1\\
@@ -293,7 +293,7 @@ Given a rectangular box where the width and height are equal, what are the dimen
 We begin by finding the critical values of $V$. We find that $V_w = 2w\ell$ and $V_\ell = w^2$; these are simultaneously 0 only at $(0,0)$. This gives a volume of 0, so we can ignore this critical point. 
 
 We now consider the volume along the constraint $\ell=130-4w.$ Along this line, we have:
-$$V(w\ell) = V(w,130-4w) = w^2(130-4w) = 130w^2-4w^3 = V_1(w).$$
+$$V(w,\ell) = V(w,130-4w) = w^2(130-4w) = 130w^2-4w^3 = V_1(w).$$
 The constraint is applicable on the $w$-interval $[0,32.5]$ as indicated in the figure. Thus we want to maximize $V_1$ on $[0,32.5]$. 
 
 Finding the critical values of $V_1$, we take the derivative and set it equal to 0:
